unpackaged/main/default/objects/aeon2__Day__c/aeon2__Day__c.object-meta.xml
<CustomObject>
    <label>Work Day</label>
    <nameField>
        <displayFormat>D{00000000}</displayFormat>
        <label>Work Day Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>