unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__Date__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>