unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__Duration__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Duration__c</fullName>
    <formula>if(ROUND(aeon2__Elapsed__c ,0)  &gt;= 60, TEXT(FLOOR(ROUND(aeon2__Elapsed__c ,0)/60)) &amp; &#39; h &#39;,&#39;&#39;) &amp; TEXT(FLOOR(MOD(ROUND(aeon2__Elapsed__c ,0), 60))) &amp; &#39; min&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>