unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__e_Meetings__c.field-meta.xml
<CustomField>
    <fullName>aeon2__e_Meetings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>