unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__EffortGroup__c.field-meta.xml
<CustomField>
    <fullName>aeon2__EffortGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Effort Group</label>
    <referenceTo>aeon2__EffortGroup__c</referenceTo>
    <relationshipName>AgentWorkDays</relationshipName>
    <type>Lookup</type>
</CustomField>