unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__Elapsed__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Elapsed__c</fullName>
    <formula>(aeon2__lta__c-aeon2__In__c)/60000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>