unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__Idle__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Idle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Idle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>