unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__In__c.field-meta.xml
<CustomField>
    <fullName>aeon2__In__c</fullName>
    <label>In</label>
    <type>Time</type>
</CustomField>