unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__lta__c.field-meta.xml
<CustomField>
    <fullName>aeon2__lta__c</fullName>
    <label>Last Seen</label>
    <type>Time</type>
</CustomField>