unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__ltb__c.field-meta.xml
<CustomField>
    <fullName>aeon2__ltb__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>