unpackaged/main/default/objects/aeon2__Day__c/fields/aeon2__Out__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Out__c</fullName>
    <formula>IF((NOW()-aeon2__ltb__c)*1440&gt;5,aeon2__lta__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out</label>
    <type>Time</type>
</CustomField>