unpackaged/main/default/objects/aeon2__Day__c/fields/o_Available_Email_and_Web__c.field-meta.xml
<CustomField>
    <fullName>o_Available_Email_and_Web__c</fullName>
    <label>Email &amp; Web</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>