unpackaged/main/default/objects/aeon2__Day__c/fields/o_Available_Social_Cases__c.field-meta.xml
<CustomField>
    <fullName>o_Available_Social_Cases__c</fullName>
    <label>Social Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>