unpackaged/main/default/objects/aeon2__Day__c/fields/o_Busy_Break__c.field-meta.xml
<CustomField>
    <fullName>o_Busy_Break__c</fullName>
    <label>Omni_Busy_Break</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>