unpackaged/main/default/objects/aeon2__Day__c/fields/o_Lunch__c.field-meta.xml
<CustomField>
    <fullName>o_Lunch__c</fullName>
    <label>Omni Lunch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>