unpackaged/main/default/objects/aeon2__Day__c/fields/o_Phone_Call__c.field-meta.xml
<CustomField>
    <fullName>o_Phone_Call__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Phone Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>