unpackaged/main/default/objects/aeon2__Day__c/fields/o_Ready_for_Cases__c.field-meta.xml
<CustomField>
    <fullName>o_Ready_for_Cases__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ready for Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>