unpackaged/main/default/objects/aeon2__Day__c/fields/o_Ready_for_Cases_Chat__c.field-meta.xml
<CustomField>
    <fullName>o_Ready_for_Cases_Chat__c</fullName>
    <label>Ready for Cases &amp; Chat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>