unpackaged/main/default/objects/aeon2__Day__c/fields/o_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>o_Time_Out__c</fullName>
    <label>Time Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>