unpackaged/main/default/objects/aeon2__Day__c/listViews/aeon2__All.listView-meta.xml
<ListView>
    <fullName>aeon2__All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>aeon2__Date__c</columns>
    <columns>aeon2__In__c</columns>
    <columns>aeon2__Out__c</columns>
    <columns>aeon2__EffortGroup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>